# GabaritaENEM

./: README.md  pyproject.toml  requirements.txt
processed/: enem_2011_99.json  enem_2012_99.json  enem_2013_99.json  enem_2014_99.json  enem_2015_99.json  enem_2016_99.json  enem_2017_99.json  enem_2018_99.json  enem_2019_99.json  enem_2020_99.json  enem_2022_99.json  enem_2023_99.json  enem_2024_99.json  enem_2025_99.json
src/: main.py
src/agents/: agent_graph.py  api_test.py  automation_agent.py  aux_def_rag.py  embeddings.py  main_agent.py  rag_agent.py  retriever.py
src/mcp/: mcp_docstore.py
src/mcp_server/: mcp_docstore.py
src/tools/: chuncking.py  create_vector_embedding.py  main_chuncking.py  test_embedding.py
src/vectors/ac4f439c-e34e-4f8e-a67d-403afa65e249/: index_metadata.pickle
src/vectors/af5bc862-72f3-43d1-87c7-e7f23a9bf9d8/: index_metadata.pickle
