[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gabarita-enem"
version = "0.1.0"
description = "Tutor inteligente multi-agente para preparação ao ENEM"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pymupdf>=1.24.0",             
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pipreqs>=0.4.13",
]